another missing null pointer check in multilinebar, fdo#44518